<resources>
    <string name="app_name">MotoGP</string>
    <string name="navigation_drawer_open">Abrir</string>
    <string name="navigation_drawer_close">Cerrar</string>
    <string name="user_image">Imagen de usuario</string>
    <string name="user">Usuario</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_panel">Panel</string>
    <string name="menu_notificaciones">Notificaciones</string>
    <string name="toolbar_busqueda">Buscar</string>
    <string name="toolbar_ordenar">Ordenar</string>
    <string name="toolbar_logout">Cerrar sesión</string>
    <string name="bienvenida">Bienvenid@, %1$s</string>
    <string name="menu_contacto">Contacto</string>
    <string name="menu_clasificacion">Clasificación</string>
    <string name="menu_favoritos">Favoritos</string>
    <string name="menu_gallery">Galería</string>
    <string name="menu_slideshow">SlideShow</string>
    <string name="titulo">MotoGP</string>
    <string name="login_con_google">Iniciar sesión con Google</string>
    <string name="login_con_facebook">Iniciar sesión con Facebook</string>
    <string name="submit">Iniciar sesión</string>
    <string name="password_olvidada">¿Has olvidado tu contraseña?</string>
    <string name="registrarse">¿No tienes cuenta? Regístrate aquí</string>
    <string name="cambiar_idioma">Cambiar idioma</string>
    <string name="usuario">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="logo">Logo</string>
    <string name="posicion">1</string>
    <string name="nombre_piloto">Nombre del piloto</string>
    <string name="nombre_equipo">Nombre del equipo</string>
    <string name="favorito">Favorito</string>
    <string name="bandera_de_la_nacionalidad">Bandera de la nacionalidad</string>
    <string name="puntos">10</string>
    <string name="numero">89</string>
    <string name="formulario_de_contacto">Formulario de contacto</string>
    <string name="introduce_tu_telefono">Introduce tu teléfono</string>
    <string name="introduce_tu_correo">Introduce tu correo</string>
    <string name="introduce_tu_ubicacion">Introduce tu ubicación</string>
    <string name="introduce_tu_whatsapp">Introduce tu WhatsApp</string>
    <string name="usuario_obligatorio">El campo de usuario no puede estar vacío</string>
    <string name="password_obligatorio">El campo de contraseña no puede estar vacío</string>
    <string name="restablecer_password">Restablecer contraseña</string>
    <string name="credenciales_invalidas">Por favor, ingresa tus credenciales correctamente</string>
    <string name="inicio_sesion_google_correcto">Iniciada la sesión con Google correctamente</string>
    <string name="inicio_sesion_google_error">Error en autenticación con Google</string>
    <string name="nombre">Nombre</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento</string>
    <string name="email">Email</string>
    <string name="contrase_a">Contraseña</string>
    <string name="registro">Registrarse</string>
    <string name="registro_correcto">Registro realizado correctamente. Iniciando sesión…</string>
    <string name="snackbar_boton_pulsado">Has pulsado el botón</string>
    <string name="alert_confirmacion">¿Estás seguro de que deseas salir?</string>
    <string name="alert_cerrar_sesion">¿Deseas cerrar sesión?</string>
    <string name="alert_cerrar_sesion_inactiva">No hay sesión activa</string>
    <string name="alert_si">Sí</string>
    <string name="alert_no">No</string>
    <string name="telefono_obligatorio">Por favor, ingresa un número de teléfono</string>
    <string name="correo_obligatorio">Por favor, ingresa un correo electrónico</string>
    <string name="correo_obligatorio_valido">Por favor, ingresa un correo electrónico válido</string>
    <string name="correo_enviado">Se ha enviado un correo para restablecer tu contraseña</string>
    <string name="ubicacion_obligatorio">Por favor, ingresa una ubicación válida</string>
    <string name="abrir_con">Abrir con</string>
    <string name="prefijo_obligatorio">Por favor, ingresa el prefijo del país</string>
    <string name="telefono_valido">Por favor, ingresa un número de teléfono válido</string>
    <string name="permiso_llamada_denegado">Permiso de llamada denegado</string>
    <string name="permiso_ubicacion_denegado">Permiso de ubicación denegado</string>
    <string name="contacto_telefono">600 123 456</string>
    <string name="contacto_correo">contacto@empresa.com</string>
    <string name="contacto_direccion">C. Carlos III, 3, 30201 Cartagena, Murcia</string>
    <string name="contacto_whatsapp">+34 666 666 666</string>
</resources>
