<menu
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/action_search"
            android:icon="@drawable/ic_search"
            android:title="@string/toolbar_busqueda"
            app:showAsAction="ifRoom|collapseActionView"
            app:actionViewClass="androidx.appcompat.widget.SearchView"/>
    <item
            android:id="@+id/action_sort"
            android:icon="@drawable/ic_sort"
            android:title="@string/toolbar_ordenar"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/action_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/toolbar_logout"
            app:showAsAction="ifRoom">
    </item>
</menu>